// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders type 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.2em;
  text-align: center;
  margin: 0 0.402rem 0 0;
  padding: 0.402rem 1.440rem 0.402rem 1.440rem;
  border: 1px solid #d8d8d8;
  color: #000000;
  background-color: #ffffff;
  font-weight: normal;
  display: inline-block;
  cursor: pointer;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  border-bottom-left-radius: 0.40187757201646096rem;
  border-bottom-right-radius: 0.40187757201646096rem;
}

.c0:hover {
  background-color: #f7f7f7;
}

.c0:active {
  background-color: #e5e5e5;
}

.c0:focus {
  outline: none;
}

.c0::-moz-focus-inner {
  border: 0;
}

.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.2em;
  text-align: center;
  margin: 0 0.402rem 0 0;
  padding: 0.402rem 1.440rem 0.402rem 1.440rem;
  border: 1px solid #bdbdbd;
  color: #ffffff;
  background-color: #a7bd0d;
  font-weight: normal;
  display: inline-block;
  cursor: pointer;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  border-bottom-left-radius: 0.40187757201646096rem;
  border-bottom-right-radius: 0.40187757201646096rem;
}

.c1:hover {
  background-color: #a1b70c;
}

.c1:active {
  background-color: #96aa0b;
}

.c1:focus {
  outline: none;
}

.c1::-moz-focus-inner {
  border: 0;
}

.c2 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.2em;
  text-align: center;
  margin: 0 0.402rem 0 0;
  padding: 0.402rem 1.440rem 0.402rem 1.440rem;
  border: 1px solid #2c81ba;
  color: #ffffff;
  background-color: #3498db;
  font-weight: normal;
  display: inline-block;
  cursor: pointer;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  border-bottom-left-radius: 0.40187757201646096rem;
  border-bottom-right-radius: 0.40187757201646096rem;
}

.c2:hover {
  background-color: #3293d4;
}

.c2:active {
  background-color: #2e88c5;
}

.c2:focus {
  outline: none;
}

.c2::-moz-focus-inner {
  border: 0;
}

.c3 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.2em;
  text-align: center;
  margin: 0 0.402rem 0 0;
  padding: 0.402rem 1.440rem 0.402rem 1.440rem;
  border: 1px solid #cd2010;
  color: #ffffff;
  background-color: #f22613;
  font-weight: normal;
  display: inline-block;
  cursor: pointer;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  border-bottom-left-radius: 0.40187757201646096rem;
  border-bottom-right-radius: 0.40187757201646096rem;
}

.c3:hover {
  background-color: #ea2412;
}

.c3:active {
  background-color: #d92211;
}

.c3:focus {
  outline: none;
}

.c3::-moz-focus-inner {
  border: 0;
}

.c4 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.2em;
  text-align: center;
  margin: 0 0.402rem 0 0;
  padding: 0.402rem 1.440rem 0.402rem 1.440rem;
  border: 1px solid #208d4d;
  color: #ffffff;
  background-color: #26a65b;
  font-weight: normal;
  display: inline-block;
  cursor: pointer;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  border-bottom-left-radius: 0.40187757201646096rem;
  border-bottom-right-radius: 0.40187757201646096rem;
}

.c4:hover {
  background-color: #24a158;
}

.c4:active {
  background-color: #229551;
}

.c4:focus {
  outline: none;
}

.c4::-moz-focus-inner {
  border: 0;
}

.c5 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.2em;
  text-align: center;
  margin: 0 0.402rem 0 0;
  padding: 0.402rem 1.440rem 0.402rem 1.440rem;
  border: 1px solid #d3590b;
  color: #ffffff;
  background-color: #f9690e;
  font-weight: normal;
  display: inline-block;
  cursor: pointer;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  border-bottom-left-radius: 0.40187757201646096rem;
  border-bottom-right-radius: 0.40187757201646096rem;
}

.c5:hover {
  background-color: #f1650d;
}

.c5:active {
  background-color: #e05e0c;
}

.c5:focus {
  outline: none;
}

.c5::-moz-focus-inner {
  border: 0;
}

<div>
  <button
    className="c0"
  >
    Default
  </button>
  <button
    className="c0"
  >
    Default
  </button>
  <button
    className="c1"
  >
    Primary
  </button>
  <button
    className="c2"
  >
    Info
  </button>
  <button
    className="c3"
  >
    Danger
  </button>
  <button
    className="c4"
  >
    Success
  </button>
  <button
    className="c5"
  >
    Warning
  </button>
</div>
`;

exports[`Button renders with css 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.2em;
  text-align: center;
  margin: 0 0.402rem 0 0;
  padding: 0.402rem 1.440rem 0.402rem 1.440rem;
  border: 1px solid #d8d8d8;
  color: #000000;
  background-color: #ffffff;
  font-weight: normal;
  display: inline-block;
  cursor: pointer;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  border-bottom-left-radius: 0.40187757201646096rem;
  border-bottom-right-radius: 0.40187757201646096rem;
  -webkit-transition: all 1s;
  transition: all 1s;
}

.c0:hover {
  background-color: #f7f7f7;
}

.c0:active {
  background-color: #e5e5e5;
}

.c0:focus {
  outline: none;
}

.c0::-moz-focus-inner {
  border: 0;
}

.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.2em;
  text-align: center;
  margin: 0 0.402rem 0 0;
  padding: 0.402rem 1.440rem 0.402rem 1.440rem;
  border: 1px solid #d8d8d8;
  color: #000000;
  background-color: #ffffff;
  font-weight: normal;
  display: inline-block;
  cursor: pointer;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  border-bottom-left-radius: 0.40187757201646096rem;
  border-bottom-right-radius: 0.40187757201646096rem;
  -webkit-transition: all 2s;
  transition: all 2s;
}

.c1:hover {
  background-color: #f7f7f7;
}

.c1:active {
  background-color: #e5e5e5;
}

.c1:focus {
  outline: none;
}

.c1::-moz-focus-inner {
  border: 0;
}

<div>
  <button
    className="c0"
  />
  <button
    className="c1"
  />
</div>
`;

exports[`Button renders with margin 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.2em;
  text-align: center;
  margin: 0 1.440rem 0 0;
  padding: 0.402rem 1.440rem 0.402rem 1.440rem;
  border: 1px solid #d8d8d8;
  color: #000000;
  background-color: #ffffff;
  font-weight: normal;
  display: inline-block;
  cursor: pointer;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  border-bottom-left-radius: 0.40187757201646096rem;
  border-bottom-right-radius: 0.40187757201646096rem;
}

.c0:hover {
  background-color: #f7f7f7;
}

.c0:active {
  background-color: #e5e5e5;
}

.c0:focus {
  outline: none;
}

.c0::-moz-focus-inner {
  border: 0;
}

.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.2em;
  text-align: center;
  margin: 20px;
  padding: 0.402rem 1.440rem 0.402rem 1.440rem;
  border: 1px solid #d8d8d8;
  color: #000000;
  background-color: #ffffff;
  font-weight: normal;
  display: inline-block;
  cursor: pointer;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  border-bottom-left-radius: 0.40187757201646096rem;
  border-bottom-right-radius: 0.40187757201646096rem;
}

.c1:hover {
  background-color: #f7f7f7;
}

.c1:active {
  background-color: #e5e5e5;
}

.c1:focus {
  outline: none;
}

.c1::-moz-focus-inner {
  border: 0;
}

<div>
  <button
    className="c0"
  />
  <button
    className="c1"
  />
</div>
`;

exports[`Button renders with padding 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.2em;
  text-align: center;
  margin: 0 0.402rem 0 0;
  padding: 0.694rem 1rem 0.694rem 1rem;
  border: 1px solid #d8d8d8;
  color: #000000;
  background-color: #ffffff;
  font-weight: normal;
  display: inline-block;
  cursor: pointer;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  border-bottom-left-radius: 0.40187757201646096rem;
  border-bottom-right-radius: 0.40187757201646096rem;
}

.c0:hover {
  background-color: #f7f7f7;
}

.c0:active {
  background-color: #e5e5e5;
}

.c0:focus {
  outline: none;
}

.c0::-moz-focus-inner {
  border: 0;
}

.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.2em;
  text-align: center;
  margin: 0 0.402rem 0 0;
  padding: 20px;
  border: 1px solid #d8d8d8;
  color: #000000;
  background-color: #ffffff;
  font-weight: normal;
  display: inline-block;
  cursor: pointer;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  border-bottom-left-radius: 0.40187757201646096rem;
  border-bottom-right-radius: 0.40187757201646096rem;
}

.c1:hover {
  background-color: #f7f7f7;
}

.c1:active {
  background-color: #e5e5e5;
}

.c1:focus {
  outline: none;
}

.c1::-moz-focus-inner {
  border: 0;
}

<div>
  <button
    className="c0"
  />
  <button
    className="c1"
  />
</div>
`;
